# LeyteRay

./: CMakeLists.txt  README.md  main.cpp
src/: camera.cpp  camera.h  main.cpp
src/color/: Color.h  color.h
src/core/: Interval.h  Vec3.h  utils.h
src/materials/: lambertian.h  material.h  metal.h
src/math/: Interval.h  Vec3.h
src/profile/: TimerProfile.cpp  TimerProfile.h
src/ray/: Ray.cpp  Ray.h
src/utils/: ImageManager.h  common.h
src/world/: Hit.h  HittableList.cpp  HittableList.h  Sphere.cpp  Sphere.h
